# tccx

./: .clang-format  .cz.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .wiswa.jsonnet  .yarnrc.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  Makefile  Package.resolved  Package.swift  README.md  _config.yml  dump-headers.sh  entitlements.xml  package.json  pyproject.toml  symbols.txt
.github/: dependabot.yml
Sources/: README.md  Support.swift
docs/: README.md  badges.rst  conf.py  index.rst  sip-and-tcc.md  sip-and-tcc.rst  sip-apple-silicon-ssv.md  sip-apple-silicon-ssv.rst  sip-configuration.md  sip-configuration.rst  sip-filesystem-protection.md  sip-filesystem-protection.rst  sip-overview.md  sip-overview.rst  sip-runtime-protection.md  sip-runtime-protection.rst  tcc-internals.md  tcc-internals.rst  tcc-preapprove.rst
headers/: CDStructures.h  NSObject-Protocol.h  NSString-TCCDAdditions.h  TCCDAccessCodeIndirectObject.h  TCCDAccessFileProviderDomainIndirectObject.h  TCCDAccessIdentity.h  TCCDAccessObject.h  TCCDAccessRecord.h  TCCDAdhocSignatureCache.h  TCCDAttributionChain.h  TCCDCodeIdentity.h  TCCDDatabase.h  TCCDIdentity.h  TCCDMDMPolicyOverride.h  TCCDMessageController.h  TCCDPlatform.h  TCCDPlatformMacOS.h  TCCDPolicyOverride.h  TCCDPolicyOverrideProtected-Protocol.h  TCCDProcess.h  TCCDServer.h  TCCDService.h  libTCCD.h
include/: CDStructures.h  TCCDAccessFileProviderDomainIndirectObject.h  TCCDAccessIndirectObject.h  TCCDAccessObject.h  TCCDAccessRecord.h  TCCDCodeIdentity.h  (+6 more)
(+28 files in other folders)
