[project]
authors = [{ name = "Andrew Udvare", email = "audvare@gmail.com" }]
dependencies = []
description = "Reverse-engineering notes for macOS TCC/SIP and tcc-preapprove, a Swift CLI for TCC pre-approval."
keywords = ["macos", "tcc", "sip", "privacy", "reverse engineering", "security", "swift"]
license = "MIT"
name = "tccx"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.2"

[project.urls]
homepage = "https://tatsh.github.io/tccx/"
issues = "https://github.com/Tatsh/tccx/issues"
repository = "https://github.com/Tatsh/tccx"

[dependency-groups]
docs = [
  "autodoc-pydantic>=2.2.0",
  "doc8>=2.0.0",
  "enum-tools[sphinx]>=0.13.0",
  "esbonio>=2.0.0",
  "restructuredtext-lint>=2.0.2",
  "sphinx-click>=6.2.0",
  "sphinx-datatables>=1.0.0",
  "sphinx-immaterial>=0.13.9",
  "sphinx>=9.1.0",
  "tomlkit>=0.15.0",
]

[tool.doc8]
max-line-length = 100

[tool.uv]
package = false
